--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js --inspect"
+    "dev": "node server.js --inspect",
+    "build": "./node_modules/.bin/next build",
+    "start": "./node_modules/.bin/next start -p 8000"
   },
   "keywords": [],
   "author": "Rafael Bastiani <rafacdb@gmail.com> (https://rafaelbastiani.com/)",
   "license": "MIT",
   "dependencies": {
+    "isomorphic-unfetch": "^2.0.0",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0",
     "next": "^4.2.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-markdown": "^3.1.4"
   },
   "devDependencies": {
     "eslint": "^4.15.0",
